fix spacing on project component

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -177,10 +177,10 @@ nav
             background: rgb(30, 38, 47)
             padding: 20px
             width: 100%
-            height: 30vh
+            height: 300px
             display: flex
             flex-direction: column
-            justify-content: center
+            justify-content: space-evenly
             align-items: flex-start
             margin-bottom: 20px
 
@@ -190,7 +190,7 @@ nav
 
             p
                 color: rgb(126, 140, 154)
-                margin-bottom: 20px
+                margin-bottom: 10px
                 line-height: 25px
             a
                 text-decoration: none
